# idetik

./: .gitignore  .releaserc.json  CHUNK_STATISTICS_PLAN.md  CHUNK_STATISTICS_REDESIGN.md  CHUNK_STATISTICS_SIMPLIFICATION_PLAN.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MULTI_LAYER_LOD_BLENDING_PLAN.md  README.md  T_DIMENSION_IMPLEMENTATION_PLAN.md  eslint.config.js  eslint.config.mjs  examples-manifest.json  generate-examples-manifest.js  index.html  mock_data.json  package-lock.json  package.json  rollup.config.js  test-plan-react-components.md  tsconfig.json  typedoc.json  vite.config.js
.github/: depentabot.yml  issue_template.md  pull_request_template.md
.vitepress/: config.mjs
app/: Main.tsx  index.html
assets/: axes_layer-BxgIhTAV.js  axes_layer-BxgIhTAV.js.map  blosc-DvQQ1ST0.js  blosc-DvQQ1ST0.js.map  browser-CwsEWr7C.js  browser-CwsEWr7C.js.map  chunk-INHXZS53-DHVJiuU3.js  chunk-INHXZS53-DHVJiuU3.js.map  chunk_streaming-CXI42pXT.js  chunk_streaming-CXI42pXT.js.map  chunked_image_layer-DuyACZAI.js  chunked_image_layer-DuyACZAI.js.map  controls-C_nkNJ-y.js  controls-C_nkNJ-y.js.map  gzip-AbJRpPtV.js  gzip-AbJRpPtV.js.map  image2d_from_omezarr4d_hcs-C5s4YTih.js  image2d_from_omezarr4d_hcs-C5s4YTih.js.map  image2d_from_omezarr5d_u16-Dt6s0wED.js  image2d_from_omezarr5d_u16-Dt6s0wED.js.map  image_labels_overlay_with_value_picking-CeuLLR2s.js  image_labels_overlay_with_value_picking-CeuLLR2s.js.map  image_layer-BUXJ6hGc.js  image_layer-BUXJ6hGc.js.map  image_mask_overlay-DaRaBSfj.js  image_mask_overlay-DaRaBSfj.js.map  image_series_from_omezarr5d_u8-BRK9QGtZ.js  image_series_from_omezarr5d_u8-BRK9QGtZ.js.map  image_series_labels_overlay-Czer4ETz.js  image_series_labels_overlay-Czer4ETz.js.map  image_series_layer-xl760NUg.js  image_series_layer-xl760NUg.js.map  image_source-BemCU8_Z.js  image_source-BemCU8_Z.js.map  label_image_renderable-cSTAn_We.js  label_image_renderable-cSTAn_We.js.map  layer_blending-BQ44lndK.js  layer_blending-BQ44lndK.js.map  lz4-BIbM36RN.js  lz4-BIbM36RN.js.map  (+20 more)
ultrack-prototype/backend/: .gitattributes  .gitignore  README.md  pyproject.toml
ultrack-prototype/backend/src/ultrack_learns/: db.py  features.py  mock_data.py  models.py  sample_data.py  server.py
(+316 files in other folders)
