[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ultrack-learns"
version = "0.1.0"
description = "An API for HITL improvement of cell tracking data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "sqlalchemy>=2.0.35",
]

[project.scripts]
write-mock-data-json = "ultrack_learns.mock_data:write_mock_data_json"

[tool.uv]
dev-dependencies = [
    "pandas>=2.2.3",
]
