[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ultrack-learns"
version = "0.1.0"
description = "An API for HITL improvement of cell tracking data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "sqlalchemy>=2.0.35",
    "xgboost>=2.1.3",
    "ultrack",
]

[project.scripts]
write-mock-data-json = "ultrack_learns.mock_data:write_mock_data_json"

[project.optional-dependencies]
dev = ["pandas>=2.2.3"]

[tool.uv]
dev-dependencies = [
    "pandas>=2.2.3",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ultrack-learns = { path = ".", editable = true }
mip = ">=0.16.0rc0"  # ultrack clunky dependency

[tool.pixi.tasks]

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
